fix: error catch in kakao utils and test codes